--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
         android:layout_marginEnd="50dp"
         android:lineSpacingExtra="8sp"
         android:text="Register"
+        android:onClick="register"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="16sp"
         android:visibility="visible"
