--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -77,7 +77,7 @@
         android:layout_width="87dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="48dp"
         android:text="Phone No."
         android:textColor="@android:color/black"
         android:textSize="18sp"
@@ -87,10 +87,10 @@
     <EditText
         android:id="@+id/id_phone"
         android:layout_width="wrap_content"
-        android:layout_height="46dp"
-        android:layout_marginEnd="41dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="27dp"
+        android:layout_height="44dp"
+        android:layout_marginEnd="37dp"
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Phone No."
         android:inputType="phone"
@@ -102,23 +102,64 @@
         android:id="@+id/Address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="37dp"
         android:text="Address"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="285dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/phone" />
 
     <EditText
         android:id="@+id/id_address"
-        android:layout_width="wrap_content"
+        android:layout_width="208dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="41dp"
+        android:layout_marginEnd="48dp"
         android:layout_marginStart="45dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPostalAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/Address"
         app:layout_constraintTop_toBottomOf="@+id/id_phone" />
+
+    <TextView
+        android:id="@+id/ward"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="48dp"
+        android:text="Ward "
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Address" />
+
+    <Spinner
+        android:id="@+id/ward_dropdown"
+        android:layout_width="219dp"
+        android:layout_height="46dp"
+        android:layout_marginEnd="37dp"
+        android:layout_marginStart="65dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ward"
+        app:layout_constraintTop_toBottomOf="@+id/id_address" />
+
+    <Button
+        android:id="@+id/Register_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="78dp"
+        android:layout_marginEnd="41dp"
+        android:layout_marginStart="236dp"
+        android:layout_marginTop="48dp"
+        android:text="Register"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ward_dropdown" />
 
 </android.support.constraint.ConstraintLayout>
