--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -146,18 +146,20 @@
         app:layout_constraintStart_toEndOf="@+id/ward"
         app:layout_constraintTop_toBottomOf="@+id/id_address" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="74dp"
-        android:layout_height="57dp"
-        android:layout_marginBottom="71dp"
-        android:layout_marginEnd="38dp"
-        android:adjustViewBounds="true"
-        android:cropToPadding="true"
-        android:onClick="passLayout"
-        android:visibility="visible"
+    <Button
+        android:id="@+id/Register_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="78dp"
+        android:layout_marginEnd="41dp"
+        android:layout_marginStart="236dp"
+        android:layout_marginTop="48dp"
+        android:text="Register"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_send" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ward_dropdown" />
 
 </android.support.constraint.ConstraintLayout>
