--- a/app/src/main/res/layout/activity_mcd_home.xml
+++ b/app/src/main/res/layout/activity_mcd_home.xml
@@ -7,16 +7,16 @@
     tools:context=".mcdHome">
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/button_mcd"
         android:layout_width="137dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="21dp"
-        android:text="@string/button_mcd" />
+        android:text="button_mcd" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/mcd_info"
         android:layout_width="151dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
