--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -154,7 +154,8 @@
         android:layout_marginEnd="41dp"
         android:layout_marginStart="236dp"
         android:layout_marginTop="48dp"
-        android:text="Register"
+        android:text="Next"
+        android:onClick="disCreds"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
