adding feature to MCDHome

--- a/app/src/main/res/layout/activity_mcd_home.xml
+++ b/app/src/main/res/layout/activity_mcd_home.xml
@@ -1,26 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mcdHome">
+    tools:context=".mcdHome"
+    android:id="@+id/relativeLayout">
 
-    <Button
-        android:id="@+id/button_mcd"
-        android:layout_width="137dp"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="112dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="21dp"
-        android:text="button_mcd" />
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/hello_counsellor"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Hello, Counsellor" />
+    <TextView
+        android:id="@+id/logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:onClick="login"
+        android:text="@string/logout"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/mcd_info"
-        android:layout_width="151dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="21dp"
-        android:text="MCD INFO" />
-</RelativeLayout>
+
+</android.support.constraint.ConstraintLayout>
