--- a/app/src/main/res/layout/activity_mcd_home.xml
+++ b/app/src/main/res/layout/activity_mcd_home.xml
@@ -21,12 +21,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Hello, Counsellor" />
+
     <TextView
         android:id="@+id/logout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="29dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:onClick="login"
         android:text="@string/logout"
         android:textAllCaps="true"
@@ -35,6 +36,16 @@
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="46dp"
+        android:layout_height="37dp"
+        android:layout_marginEnd="13dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/logout"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/settingicon" />
 
 
 </android.support.constraint.ConstraintLayout>
