--- a/app/src/main/res/layout/activity_mcd_home.xml
+++ b/app/src/main/res/layout/activity_mcd_home.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="112dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="16dp"
@@ -54,6 +54,7 @@
         android:layout_marginStart="41dp"
         android:layout_marginTop="103dp"
         android:text="Compose"
+        android:onClick="compose"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
