--- a/app/src/main/res/layout/activity_problem__submission.xml
+++ b/app/src/main/res/layout/activity_problem__submission.xml
@@ -72,25 +72,22 @@
         android:id="@+id/Address"
         android:layout_width="wrap_content"
         android:layout_height="53dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="27dp"
         android:ems="10"
         android:hint="Enter Address"
         android:inputType="textPostalAddress"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Description" />
+        tools:layout_editor_absoluteX="72dp"
+        tools:layout_editor_absoluteY="241dp" />
 
     <TextView
         android:id="@+id/submitphoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="38dp"
         android:text="Attach photo "
         android:textSize="16sp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Address" />
+        tools:layout_editor_absoluteY="332dp" />
 
     <TextView
         android:id="@+id/sumbit"
