--- a/app/src/main/res/layout/activity_user_home.xml
+++ b/app/src/main/res/layout/activity_user_home.xml
@@ -82,6 +82,7 @@
         android:layout_height="37dp"
         android:layout_marginEnd="12dp"
         android:layout_marginTop="16dp"
+        android:onClick="setting"
         app:layout_constraintEnd_toStartOf="@+id/logout"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/settingicon" />
