--- a/app/src/main/res/layout/activity_pass_layout.xml
+++ b/app/src/main/res/layout/activity_pass_layout.xml
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="60dp"
         android:layout_marginTop="52dp"
-        android:text="Register"
+        android:text="Done"
         android:onClick="home"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
