--- a/app/src/main/res/menu/menu_couns_info.xml
+++ b/app/src/main/res/menu/menu_couns_info.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.dell.socialentproject.tabbed_Activity">
+    tools:context="com.example.dell.socialentproject.couns_info">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
