--- a/app/src/main/res/layout/fragment_frag_one.xml
+++ b/app/src/main/res/layout/fragment_frag_one.xml
@@ -9,6 +9,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="hello blank fragment one" />
+        android:text="one "
+        android:textAllCaps="true"
+        android:textSize="30sp"
+        android:textStyle="bold|italic" />
 
 </FrameLayout>
