--- a/app/src/main/res/layout/activity_user_home.xml
+++ b/app/src/main/res/layout/activity_user_home.xml
@@ -57,6 +57,7 @@
         android:layout_marginEnd="64dp"
         android:backgroundTint="@android:color/holo_green_light"
         android:text="@string/notification"
+        android:onClick = "notifybutton"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
